--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-    <string name="app_name">PassarTelas</string>
-    <string name="action_settings">Settings</string>
-    <string name="tab_text_1">a</string>
-    <string name="tab_text_2">b</string>
-    <string name="tutorial_1">RETIRE UMA AMOSTRA DO FRASCO DE AMOTRA E COLOQUE NO PRATO</string>
+    <string name="app_name">Microalgas</string>
+    <string name="action_settings">Configurações</string>
+    <string name="tutorial_1">RETIRE UMA AMOSTRA DO COLETOR E COLOQUE NO PRATO DE AMOSTRAS</string>
     <string name="date_format_pattern">ddMMyyyy_HHmmss</string>
+    <string name="action_about">Sobre</string>
+    <string name="ble_not_supported">Bluetooth Low Energy not Available</string>
+    <string name="title_activity_paired_devices">paired_devices</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="any_connected_devices">Any connected devices</string>
 </resources>
