Requisição automatica para o bluetooth realizada. Tela de informações adicionadas mas incompleta.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="bluetooth_connection_error">Ocorreu um erro de conexão</string>
     <string name="bluetooth_connection_successful">Conectado</string>
     <string name="bluetooth_connection_timeout">Connection Timeout</string>
+    <string name="depth">Profundidade:</string>
 </resources>
